--- a/src/Components/UserComponents/Navbar/Navbar.css
+++ b/src/Components/UserComponents/Navbar/Navbar.css
@@ -1,202 +1,136 @@
-/**
- * index.scss
- * - Add any styles you want here!
- */
+.header_section {
+  background-color: #ffffff;
+  margin-bottom: 80px;
+}
 
- body {
-    background: #2d2d7f !important;
-  }
-  /* main-header start */
-  [data-target="#mainMenu"] {
-    position: relative;
-    z-index: 999;
-  }
-  
-  #mainMenu li > a {
-    font-size: 12px;
-    letter-spacing: 1px;
-    color: #fff;
-    font-weight: 400;
-    position: relative;
-    z-index: 1;
-    text-decoration: none;
-  }
-  
-  .main-header.fixed-nav #mainMenu li > a {
-    color: #fff;
-    text-decoration: none;
-  }
-  
-  #mainMenu li:not(:last-of-type) {
-    margin-right: 30px;
-  }
-  
-  #mainMenu li > a::before {
-    position: absolute;
-    content: "";
-    width: calc(100% - 1px);
-    height: 1px;
-    background: #fff;
-    bottom: -6px;
-    left: 0;
-  
-    -webkit-transform: scale(0, 1);
-    -ms-transform: scale(0, 1);
-    transform: scale(0, 1);
-    -webkit-transform-origin: right center;
-    -ms-transform-origin: right center;
-    transform-origin: right center;
-    z-index: -1;
-  
-    -webkit-transition: transform 0.5s ease;
-    transition: transform 0.5s ease;
-  }
-  
-  #mainMenu li > a:hover::before,
-  #mainMenu li > a.active::before {
-    -webkit-transform: scale(1, 1);
-    -ms-transform: scale(1, 1);
-    transform: scale(1, 1);
-    -webkit-transform-origin: left center;
-    -ms-transform-origin: left center;
-    transform-origin: left center;
-  }
-  
-  .main-header.fixed-nav #mainMenu li > a::before {
-    background: #000;
-  }
-  
-  .main-header {
-    position: fixed;
-    top: 25px;
-    left: 0;
-    z-index: 99;
-    width: 100%;
-    -webkit-transition: all 0.4s ease;
-    transition: all 0.4s ease;
-  }
-  
-  .main-header.fixed-nav {
-    top: 0;
-    background: #fff;
-    -webkit-box-shadow: 0 8px 12px -8px rgba(0, 0, 0, 0.09);
-    box-shadow: 0 8px 12px -8px rgba(0, 0, 0, 0.09);
-    -webkit-transition: all 0.4s ease;
-    transition: all 0.4s ease;
-  }
-  
-  .main-header.fixed-nav .navbar-brand > img:last-of-type {
-    display: block;
-  }
-  
-  .main-header.fixed-nav .navbar-brand > img:first-of-type {
-    display: none;
-  }
-  .navbar-brand {
-    color: #fff;
-  }
-  .main-header .navbar-brand img {
-    max-width: 40px;
-    animation: fadeInLeft 0.4s both 0.4s;
-  }
-  /* main-header end */
-  @media (max-width: 991px) {
-    /*header starts*/
-    .collapse.in {
-      display: block !important;
-      padding: 0;
-      clear: both;
-    }
-  
-    .navbar-toggler {
-      margin: 0;
-      padding: 0;
-      width: 40px;
-      height: 40px;
-      position: absolute;
-      top: 25px;
-      right: 0;
-      border: none;
-      border-radius: 0;
-      outline: none !important;
-    }
-  
-    .main-header .navbar {
-      float: none;
-      width: 100%;
-      padding-left: 0;
-      padding-right: 0;
-      text-align: center;
-    }
-  
-    .main-header .navbar-nav {
-      margin-top: 70px;
-    }
-  
-    .main-header .navbar-nav li .nav-link {
-      text-align: center;
-      padding: 20px 15px;
-      border-radius: 0px;
-    }
-  
-    /**/
-    .main-header .navbar-toggler .icon-bar {
-      background-color: #fff;
-      margin: 0 auto 6px;
-      border-radius: 0;
-      width: 30px;
-      height: 3px;
-      position: absolute;
-      right: 0;
-      -webkit-transition: all 0.2s ease;
-      transition: all 0.2s ease;
-    }
-  
-    .main-header .navbar .navbar-toggler .icon-bar:first-child {
-      margin-top: 3px;
-    }
-  
-    .main-header .navbar-toggler .icon-bar-1 {
-      width: 10px;
-      top: 0px;
-    }
-  
-    .main-header .navbar-toggler .icon-bar-2 {
-      width: 16px;
-      top: 12px;
-    }
-  
-    .main-header .navbar-toggler .icon-bar-3 {
-      width: 20px;
-      top: 21px;
-    }
-  
-    .main-header .current .icon-bar {
-      margin-bottom: 5px;
-      border-radius: 0;
-      display: block;
-    }
-  
-    .main-header .current .icon-bar-1 {
-      width: 18px;
-    }
-  
-    .main-header .current .icon-bar-2 {
-      width: 30px;
-    }
-  
-    .main-header .current .icon-bar-3 {
-      width: 10px;
-    }
-  
-    .main-header .navbar-toggler:hover .icon-bar {
-      background-color: #fff;
-    }
-  
-    .main-header .navbar-toggler:focus .icon-bar {
-      background-color: #fff;
-    }
-  
-    /*header ends*/
-  }
+.header_section .container-fluid {
+  padding-right: 25px;
+  padding-left: 25px;
+}
+
+.header_section .nav_container {
+  margin: 0 auto;
+}
+
+.custom_nav-container .navbar-nav .nav-item .nav-link {
+  padding: 3px 15px;
+  margin: 10px 15px;
+  color: #272727;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+a,
+a:hover,
+a:focus {
+  text-decoration: none;
+}
+
+a:hover,
+a:focus {
+  color: initial;
+}
+
+.btn,
+.btn:focus {
+  outline: none !important;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.custom_nav-container .nav_search-btn {
+  width: 35px;
+  height: 35px;
+  padding: 0;
+  border: none;
+}
+
+.navbar-brand span {
+  font-size: 24px;
+  font-weight: 700;
+  color: #272727;
+  text-transform: uppercase;
+}
+
+.custom_nav-container {
+  z-index: 99999;
+  padding: 5px 0;
+}
+
+.custom_nav-container .navbar-toggler {
+  outline: none;
+}
+
+.custom_nav-container .navbar-toggler {
+  padding: 0;
+  width: 37px;
+  height: 42px;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.custom_nav-container .navbar-toggler span {
+  display: block;
+  width: 32px;
+  height: 4px;
+  background-color: #000000;
+  border-radius: 15px;
+  margin: 7px 0;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  position: relative;
+  transition: all 0.3s;
+}
+
+.custom_nav-container .navbar-toggler span::before, .custom_nav-container .navbar-toggler span::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #000000;
+  border-radius: 15px;
+  top: -10px;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.custom_nav-container .navbar-toggler span::after {
+  top: 10px;
+}
+
+.custom_nav-container .navbar-toggler[aria-expanded="true"] {
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
+}
+
+.custom_nav-container .navbar-toggler[aria-expanded="true"] span {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.custom_nav-container .navbar-toggler[aria-expanded="true"] span::before, .custom_nav-container .navbar-toggler[aria-expanded="true"] span::after {
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  top: 0;
+}
+
+.quote_btn-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.quote_btn-container a {
+  color: #151515;
+  margin-right: 25px;
+  text-transform: uppercase;
+}
+
+.quote_btn-container a span {
+  margin-right: 5px;
+}
   
