--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Tajawal:wght@200;300;400;500;700;800;900&display=swap');
 
 :root{
-  --primary-blue-color: #ADD8E6
-  --secondary-green-color: #8DA57E
-  --secondary-pink-color: #F4C2C2
-  --secondary-gray--color: #D5D8DC
+  --primary-blue-color: #ADD8E6;
+  --secondary-green-color: #8DA57E;
+  --secondary-pink-color: #F4C2C2;
+  --secondary-gray--color: #D5D8DC;
   /* Font Colors */
-  --primary-font-color: #333333
-  --secondary-font-color: #2C3E50
+  --primary-font-color: #333333;
+  --secondary-font-color: #2C3E50;
   /* Background Colors */
-  --primary-bg-color: #FFFFFF
-  --secondary-bg-color: #F0F0FC
-  --third-bg-color: #F5F5F5
+  --primary-bg-color: #FFFFFF;
+  --secondary-bg-color: #F0F0FC;
+  --third-bg-color: #F5F5F5;
 }
 
 p{
