--- a/src/Components/UserComponents/Navbar/Navbar.css
+++ b/src/Components/UserComponents/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 .header_section {
   background-color: #ffffff;
-  margin-bottom: 80px;
+  margin-bottom: 40px;
 }
 
 .header_section .container-fluid {
@@ -18,27 +18,42 @@
   color: #272727;
   text-align: center;
   text-transform: uppercase;
+  position: relative; /* For positioning the ::after pseudo-element */
 }
 
-a{
+.custom_nav-container .navbar-nav .nav-item .nav-link::after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 2px;
+  background: var(--primary-blue-color);
+  transition: width 0.3s ease-in-out;
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+}
+
+.custom_nav-container .navbar-nav .nav-item .nav-link:hover::after,
+.custom_nav-container .navbar-nav .nav-item .nav-link.active::after {
+  width: 100%;
+}
+
+a {
   font-family: "Tajawal", sans-serif;
 }
-a,
-a:hover,
-a:focus {
+
+a, a:hover, a:focus {
   text-decoration: none;
 }
 
-a:hover,
-a:focus {
+a:hover, a:focus {
   color: initial;
 }
 
-.btn,
-.btn:focus {
+.btn, .btn:focus {
   outline: none !important;
   -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
 }
 
 .custom_nav-container .nav_search-btn {
@@ -85,7 +100,8 @@ a:focus {
   transition: all 0.3s;
 }
 
-.custom_nav-container .navbar-toggler span::before, .custom_nav-container .navbar-toggler span::after {
+.custom_nav-container .navbar-toggler span::before,
+.custom_nav-container .navbar-toggler span::after {
   content: "";
   position: absolute;
   left: 0;
@@ -104,17 +120,18 @@ a:focus {
 
 .custom_nav-container .navbar-toggler[aria-expanded="true"] {
   -webkit-transform: rotate(360deg);
-          transform: rotate(360deg);
+  transform: rotate(360deg);
 }
 
 .custom_nav-container .navbar-toggler[aria-expanded="true"] span {
   -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
-.custom_nav-container .navbar-toggler[aria-expanded="true"] span::before, .custom_nav-container .navbar-toggler[aria-expanded="true"] span::after {
+.custom_nav-container .navbar-toggler[aria-expanded="true"] span::before,
+.custom_nav-container .navbar-toggler[aria-expanded="true"] span::after {
   -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
+  transform: rotate(90deg);
   top: 0;
 }
 
