--- a/src/Components/Times/Times.css
+++ b/src/Components/Times/Times.css
@@ -3,3 +3,6 @@
     background-color: var(--primary-bg-color);
     width: 100px;
 }
+.timeCard:hover{
+    background-color: var(--secondary-green-color);
+}
