--- a/src/Pages/Reservation/Reservation.css
+++ b/src/Pages/Reservation/Reservation.css
@@ -1,3 +1,7 @@
+.reservation-page{
+    background-color: var(--primary-blue-color);
+    padding: 50px;
+}
 .reservation-bg{
     background-color: #F5F5F5;
     padding: 20px;
