--- a/src/Components/UserComponents/PrimaryButton/PrimaryButton.css
+++ b/src/Components/UserComponents/PrimaryButton/PrimaryButton.css
@@ -6,6 +6,7 @@
 
 .primary-btn:hover {
     background-color: var(--secondary-green-color) !important;
+    color: white;
 }
 
 .primary-btn:active {
