--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 :root{
   --primary-blue-color: #ADD8E6;
+  --primary-blue-color: #ADD8E6;
   --secondary-green-color: #8DA57E;
   --secondary-pink-color: #F4C2C2;
   --secondary-gray--color: #D5D8DC;
