--- a/src/Components/UserComponents/HeroSection/Hero.css
+++ b/src/Components/UserComponents/HeroSection/Hero.css
@@ -26,8 +26,8 @@ p {
 }
 
 h1.rtl-text {
-    font-size: 2.5rem;
-    font-weight: bold;
+    font-size: 3rem;
+    font-weight:normal;
     font-family: "Tajawal", sans-serif;
 }
 
