small edits done

--- a/src/Components/UserComponents/Doctor/Doctor.css
+++ b/src/Components/UserComponents/Doctor/Doctor.css
@@ -2,7 +2,7 @@
     color: var(--primary-font-color);
 }
 .specialization{
-    color: var(--primary-blue-color);
+    color: var(--secondary-green-color);
 }
 
 .doctor-img{
