--- a/src/Components/UserComponents/PrimaryButton/PrimaryButton.css
+++ b/src/Components/UserComponents/PrimaryButton/PrimaryButton.css
@@ -1,5 +1,6 @@
 .primary-btn {
     transition: background-color 0.3s ease-in-out;
+    width: 100%;
     /* Smooth transition for color changes */
 
 }
