--- a/src/Components/UserComponents/Article/Article.css
+++ b/src/Components/UserComponents/Article/Article.css
@@ -2,7 +2,10 @@
     max-width: 350px;
     margin: auto ;
     overflow: hidden;
+    text-decoration: none;
+    color: black;
 }
+
 .article-img{
     max-height: 200px;
     object-fit: cover;
